clean up, fix css margin on safari

--- a/src/components/chat/message.scss
+++ b/src/components/chat/message.scss
@@ -11,7 +11,7 @@
    
 }
 .single-msg {
-    max-width:200px!important;
+    max-width:250px!important;
 }
 .messages-part {
     @media only screen and (max-width: 900px){
